this should fixed some minor spacings for the the navs

--- a/resources/scss/07.components/02.navigations/01.primary/_index.scss
+++ b/resources/scss/07.components/02.navigations/01.primary/_index.scss
@@ -4,6 +4,7 @@
 		border: none;
 		bottom: 1.125rem;
 		color: color( white );
+		cursor: pointer;
 		font-family: font-family( primary );
 		left: 1.125rem;
 		padding: 0.5rem 1rem;
@@ -47,20 +48,19 @@
 					right: 1.250rem;
 
 					.fontawesome {
-						border: 0.063rem solid color( white );
 						color: color( white );
-						font-family: 'Font Awesome 5 Free';
 						font-size: 1.125rem;
-						padding: 0.4rem;
+						padding: 0.6rem;
 
 						&:before {
 							content: '';
+							cursor: pointer;
 							display: inline-block;
 							border: solid white;
 							border-width: 0 0.25rem 0.25rem 0;
 							transform: rotate( -135deg );
 							padding: 0.25rem;
-							margin-right: 0.6rem;
+							margin-right: 0.2rem;
 						}
 					}
 				}
@@ -86,6 +86,7 @@
 							color: color( white );
 							font-family: 'Font Awesome 5 Free';
 							font-size: 1.25rem;
+							padding: 0.6rem;
 
 							&:before {
 								content: '';
@@ -94,7 +95,7 @@
 								border-width: 0 0.25rem 0.25rem 0;
 								transform: rotate(45deg);
 								padding: 0.25rem;
-								margin-right: 0.6rem;
+								margin-right: 0.2rem;
 							}
 						}
 					}
